--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">RummyTitans</string>
+    <string name="app_name_rummy">RummyTitans</string>
     <!--    google login api-->
     <string name="client_id" translatable="false">
         487152729427-dvcb1ee2lqo9f0o4qlb562cpdghii7vf.apps.googleusercontent.com
