--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1123,7 +1123,7 @@
     <string name="information_update">Information Update</string>
     <string name="select_document">Select Document</string>
     <string name="upload_front">Upload Front</string>
-    <string name="credit_bonus">Credit Bonus</string>
+    <string name="game_bonus">Game Bonus</string>
     <string name="helpDesk">HelpDesk</string>
     <string name="back_alert">Are you sure you want to exit?.</string>
 
