sdk withdraw process

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="hansle_app_id">YAIV36824R8RCXX6QP9AM81VU</string>
     <string name="hansle_key">ZI8O7EEPP1HDROH1NBY0ZRKO571T0FNQLV23ARX2VXVMJ0H7RW</string>
     <string name="appsflyer_open_app_link">rummytitansopenapp</string>
-
+    <string name="your_winning">Your Winning</string>
 
     <!-- <string name="youtube_api_key">AIzaSyBVd2LOOPlLefvuCkhk0tgjThZIUSLgNpM</string>-->
 
